--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "@argent/tma-wallet": "^1.19.3",
+    "@starknet-react/chains": "*",
+    "@starknet-react/core": "*",
+    "next": "15.1.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "starknetkit": "^2.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/webpack-env": "^1.18.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
