--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@argent/tma-wallet": "^1.19.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@starknet-react/chains": "*",
     "@starknet-react/core": "*",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "starknetkit": "^2.6.1"
+    "starknetkit": "^2.6.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
